--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "apollo-server-express": "^3.0.2",
     "gql": "^1.1.2",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "validator": "^13.6.0"
   }
 }
