--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "validator": "^13.6.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "@material-ui/icons": "^4.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +43,5 @@
     ]
   },
   "devDependencies": {
-    "@material-ui/icons": "^4.11.2"
   }
 }
